@@ -117,9 +117,9 @@ error.connection.servertype=The value of the serverType property is invalid: {0}
 error.connection.sso=Single-Sign-On is only supported on Windows. Please specify a user name.
 error.connection.timeout=Login timed out.
 error.conproxy.noconn="Connection has been returned to pool and this reference is no longer valid.
-error.convert.numericoverflow=Numeric overflow in conversion of value {0} to type {1}.
-error.convert.badnumber=The value supplied cannot be converted to {0}.
-error.convert.badtypeconst=Unable to convert value to {0}.
+error.convert.numericoverflow=Numeric overflow in conversion of value {0} to {1}.
+error.convert.badnumber=Value {0} cannot be converted to {1}.
+error.convert.badtypeconst=Unable to convert value {0} to {1}.
 error.convert.badtypes=Unable to convert between {0} and {1}.
 error.cursoropen.fail=Cursor failed to open.
 error.datetime.range=Only dates between January 1, 1753 and December 31, 9999 are accepted.
